src/gen/grammar/matlabParser.py
# Generated from grammar/matlab.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class matlabParser ( Parser ):

    grammarFileName = "matlab.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'elseif'", "'else'", "'for'", 
                     "'while'", "'end'", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'^'", "'.*'", "'./'", "'.^'", "':'", "'=='", "'~='", 
                     "'<'", "'>'", "'<='", "'>='", "'&'", "'&&'", "'|'", 
                     "'||'", "'('", "')'", "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "KW_IF", "KW_ELSEIF", "KW_ELSE", "KW_FOR", 
                      "KW_WHILE", "KW_END", "ASSIGN", "PLUS", "MINUS", "STAR", 
                      "SLASH", "POW", "DOT_STAR", "DOT_SLASH", "DOT_POW", 
                      "COLON", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "AND", 
                      "DBL_AND", "OR", "DBL_OR", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "SEMI", "COMMA", "STRING", "ID", "NUMBER", 
                      "COMMENT", "NEWLINE", "WS" ]

    RULE_programa = 0
    RULE_instrucao = 1
    RULE_instrucaoSimples = 2
    RULE_blocoDeInstrucoes = 3
    RULE_instrucaoDeBloco = 4
    RULE_instrucaoIf = 5
    RULE_instrucaoFor = 6
    RULE_instrucaoWhile = 7
    RULE_ladoEsquerdoAtribuicao = 8
    RULE_atribuicao = 9
    RULE_expressao = 10
    RULE_expressaoOuLogico = 11
    RULE_expressaoELogico = 12
    RULE_expressaoComparacao = 13
    RULE_expressaoIntervalo = 14
    RULE_expressaoAditiva = 15
    RULE_expressaoMultiplicativa = 16
    RULE_expressaoPotencia = 17
    RULE_expressaoUnaria = 18
    RULE_atomo = 19
    RULE_listaArgumentos = 20
    RULE_matriz = 21
    RULE_linhasMatriz = 22
    RULE_linha = 23

    ruleNames =  [ "programa", "instrucao", "instrucaoSimples", "blocoDeInstrucoes", 
                   "instrucaoDeBloco", "instrucaoIf", "instrucaoFor", "instrucaoWhile", 
                   "ladoEsquerdoAtribuicao", "atribuicao", "expressao", 
                   "expressaoOuLogico", "expressaoELogico", "expressaoComparacao", 
                   "expressaoIntervalo", "expressaoAditiva", "expressaoMultiplicativa", 
                   "expressaoPotencia", "expressaoUnaria", "atomo", "listaArgumentos", 
                   "matriz", "linhasMatriz", "linha" ]

    EOF = Token.EOF
    KW_IF=1
    KW_ELSEIF=2
    KW_ELSE=3
    KW_FOR=4
    KW_WHILE=5
    KW_END=6
    ASSIGN=7
    PLUS=8
    MINUS=9
    STAR=10
    SLASH=11
    POW=12
    DOT_STAR=13
    DOT_SLASH=14
    DOT_POW=15
    COLON=16
    EQ=17
    NEQ=18
    LT=19
    GT=20
    LTE=21
    GTE=22
    AND=23
    DBL_AND=24
    OR=25
    DBL_OR=26
    LPAREN=27
    RPAREN=28
    LBRACK=29
    RBRACK=30
    SEMI=31
    COMMA=32
    STRING=33
    ID=34
    NUMBER=35
    COMMENT=36
    NEWLINE=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(matlabParser.EOF, 0)

        def instrucao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(matlabParser.InstrucaoContext)
            else:
                return self.getTypedRuleContext(matlabParser.InstrucaoContext,i)


        def getRuleIndex(self):
            return matlabParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = matlabParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 198239585074) != 0):
                self.state = 48
                self.instrucao()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(matlabParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrucaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrucaoDeBloco(self):
            return self.getTypedRuleContext(matlabParser.InstrucaoDeBlocoContext,0)


        def SEMI(self):
            return self.getToken(matlabParser.SEMI, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(matlabParser.NEWLINE)
            else:
                return self.getToken(matlabParser.NEWLINE, i)

        def instrucaoSimples(self):
            return self.getTypedRuleContext(matlabParser.InstrucaoSimplesContext,0)


        def getRuleIndex(self):
            return matlabParser.RULE_instrucao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucao" ):
                listener.enterInstrucao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucao" ):
                listener.exitInstrucao(self)




    def instrucao(self):

        localctx = matlabParser.InstrucaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instrucao)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 4, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.instrucaoDeBloco()
                self.state = 63
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 57
                    self.match(matlabParser.SEMI)

                elif la_ == 2:
                    self.state = 59 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 58
                            self.match(matlabParser.NEWLINE)

                        else:
                            raise NoViableAltException(self)
                        self.state = 61 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,1,self._ctx)



                pass
            elif token in [8, 9, 27, 29, 33, 34, 35]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.instrucaoSimples()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 3)
                self.state = 67 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 66
                        self.match(matlabParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 69 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrucaoSimplesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atribuicao(self):
            return self.getTypedRuleContext(matlabParser.AtribuicaoContext,0)


        def expressao(self):
            return self.getTypedRuleContext(matlabParser.ExpressaoContext,0)


        def SEMI(self):
            return self.getToken(matlabParser.SEMI, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(matlabParser.NEWLINE)
            else:
                return self.getToken(matlabParser.NEWLINE, i)

        def getRuleIndex(self):
            return matlabParser.RULE_instrucaoSimples

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucaoSimples" ):
                listener.enterInstrucaoSimples(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucaoSimples" ):
                listener.exitInstrucaoSimples(self)




    def instrucaoSimples(self):

        localctx = matlabParser.InstrucaoSimplesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instrucaoSimples)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 73
                self.atribuicao()
                pass

            elif la_ == 2:
                self.state = 74
                self.expressao()
                pass


            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.state = 77
                self.match(matlabParser.SEMI)
                pass
            elif token in [37]:
                self.state = 79 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 78
                        self.match(matlabParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 81 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoDeInstrucoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrucao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(matlabParser.InstrucaoContext)
            else:
                return self.getTypedRuleContext(matlabParser.InstrucaoContext,i)


        def getRuleIndex(self):
            return matlabParser.RULE_blocoDeInstrucoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlocoDeInstrucoes" ):
                listener.enterBlocoDeInstrucoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlocoDeInstrucoes" ):
                listener.exitBlocoDeInstrucoes(self)




    def blocoDeInstrucoes(self):

        localctx = matlabParser.BlocoDeInstrucoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_blocoDeInstrucoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 198239585074) != 0):
                self.state = 85
                self.instrucao()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrucaoDeBlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrucaoIf(self):
            return self.getTypedRuleContext(matlabParser.InstrucaoIfContext,0)


        def instrucaoFor(self):
            return self.getTypedRuleContext(matlabParser.InstrucaoForContext,0)


        def instrucaoWhile(self):
            return self.getTypedRuleContext(matlabParser.InstrucaoWhileContext,0)


        def getRuleIndex(self):
            return matlabParser.RULE_instrucaoDeBloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucaoDeBloco" ):
                listener.enterInstrucaoDeBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucaoDeBloco" ):
                listener.exitInstrucaoDeBloco(self)




    def instrucaoDeBloco(self):

        localctx = matlabParser.InstrucaoDeBlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instrucaoDeBloco)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.instrucaoIf()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.instrucaoFor()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.instrucaoWhile()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrucaoIfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_IF(self):
            return self.getToken(matlabParser.KW_IF, 0)

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(matlabParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(matlabParser.ExpressaoContext,i)


        def blocoDeInstrucoes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(matlabParser.BlocoDeInstrucoesContext)
            else:
                return self.getTypedRuleContext(matlabParser.BlocoDeInstrucoesContext,i)


        def KW_END(self):
            return self.getToken(matlabParser.KW_END, 0)

        def KW_ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(matlabParser.KW_ELSEIF)
            else:
                return self.getToken(matlabParser.KW_ELSEIF, i)

        def KW_ELSE(self):
            return self.getToken(matlabParser.KW_ELSE, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_instrucaoIf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucaoIf" ):
                listener.enterInstrucaoIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucaoIf" ):
                listener.exitInstrucaoIf(self)




    def instrucaoIf(self):

        localctx = matlabParser.InstrucaoIfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_instrucaoIf)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(matlabParser.KW_IF)
            self.state = 97
            self.expressao()
            self.state = 98
            self.blocoDeInstrucoes()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 99
                self.match(matlabParser.KW_ELSEIF)
                self.state = 100
                self.expressao()
                self.state = 101
                self.blocoDeInstrucoes()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 108
                self.match(matlabParser.KW_ELSE)
                self.state = 109
                self.blocoDeInstrucoes()


            self.state = 112
            self.match(matlabParser.KW_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrucaoForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_FOR(self):
            return self.getToken(matlabParser.KW_FOR, 0)

        def ID(self):
            return self.getToken(matlabParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(matlabParser.ASSIGN, 0)

        def expressao(self):
            return self.getTypedRuleContext(matlabParser.ExpressaoContext,0)


        def blocoDeInstrucoes(self):
            return self.getTypedRuleContext(matlabParser.BlocoDeInstrucoesContext,0)


        def KW_END(self):
            return self.getToken(matlabParser.KW_END, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_instrucaoFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucaoFor" ):
                listener.enterInstrucaoFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucaoFor" ):
                listener.exitInstrucaoFor(self)




    def instrucaoFor(self):

        localctx = matlabParser.InstrucaoForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_instrucaoFor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(matlabParser.KW_FOR)
            self.state = 115
            self.match(matlabParser.ID)
            self.state = 116
            self.match(matlabParser.ASSIGN)
            self.state = 117
            self.expressao()
            self.state = 118
            self.blocoDeInstrucoes()
            self.state = 119
            self.match(matlabParser.KW_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrucaoWhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_WHILE(self):
            return self.getToken(matlabParser.KW_WHILE, 0)

        def expressao(self):
            return self.getTypedRuleContext(matlabParser.ExpressaoContext,0)


        def blocoDeInstrucoes(self):
            return self.getTypedRuleContext(matlabParser.BlocoDeInstrucoesContext,0)


        def KW_END(self):
            return self.getToken(matlabParser.KW_END, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_instrucaoWhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucaoWhile" ):
                listener.enterInstrucaoWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucaoWhile" ):
                listener.exitInstrucaoWhile(self)




    def instrucaoWhile(self):

        localctx = matlabParser.InstrucaoWhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_instrucaoWhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(matlabParser.KW_WHILE)
            self.state = 122
            self.expressao()
            self.state = 123
            self.blocoDeInstrucoes()
            self.state = 124
            self.match(matlabParser.KW_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LadoEsquerdoAtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(matlabParser.ID, 0)

        def LPAREN(self):
            return self.getToken(matlabParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(matlabParser.RPAREN, 0)

        def listaArgumentos(self):
            return self.getTypedRuleContext(matlabParser.ListaArgumentosContext,0)


        def getRuleIndex(self):
            return matlabParser.RULE_ladoEsquerdoAtribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLadoEsquerdoAtribuicao" ):
                listener.enterLadoEsquerdoAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLadoEsquerdoAtribuicao" ):
                listener.exitLadoEsquerdoAtribuicao(self)




    def ladoEsquerdoAtribuicao(self):

        localctx = matlabParser.LadoEsquerdoAtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ladoEsquerdoAtribuicao)
        self._la = 0 # Token type
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(matlabParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(matlabParser.ID)
                self.state = 128
                self.match(matlabParser.LPAREN)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 60800631552) != 0):
                    self.state = 129
                    self.listaArgumentos()


                self.state = 132
                self.match(matlabParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ladoEsquerdoAtribuicao(self):
            return self.getTypedRuleContext(matlabParser.LadoEsquerdoAtribuicaoContext,0)


        def ASSIGN(self):
            return self.getToken(matlabParser.ASSIGN, 0)

        def expressao(self):
            return self.getTypedRuleContext(matlabParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return matlabParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)




    def atribuicao(self):

        localctx = matlabParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.ladoEsquerdoAtribuicao()
            self.state = 136
            self.match(matlabParser.ASSIGN)
            self.state = 137
            self.expressao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressaoOuLogico(self):
            return self.getTypedRuleContext(matlabParser.ExpressaoOuLogicoContext,0)


        def getRuleIndex(self):
            return matlabParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)




    def expressao(self):

        localctx = matlabParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expressao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.expressaoOuLogico()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoOuLogicoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressaoELogico(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(matlabParser.ExpressaoELogicoContext)
            else:
                return self.getTypedRuleContext(matlabParser.ExpressaoELogicoContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(matlabParser.OR)
            else:
                return self.getToken(matlabParser.OR, i)

        def DBL_OR(self, i:int=None):
            if i is None:
                return self.getTokens(matlabParser.DBL_OR)
            else:
                return self.getToken(matlabParser.DBL_OR, i)

        def getRuleIndex(self):
            return matlabParser.RULE_expressaoOuLogico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressaoOuLogico" ):
                listener.enterExpressaoOuLogico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressaoOuLogico" ):
                listener.exitExpressaoOuLogico(self)




    def expressaoOuLogico(self):

        localctx = matlabParser.ExpressaoOuLogicoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expressaoOuLogico)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.expressaoELogico()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25 or _la==26:
                self.state = 142
                _la = self._input.LA(1)
                if not(_la==25 or _la==26):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 143
                self.expressaoELogico()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoELogicoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressaoComparacao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(matlabParser.ExpressaoComparacaoContext)
            else:
                return self.getTypedRuleContext(matlabParser.ExpressaoComparacaoContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(matlabParser.AND)
            else:
                return self.getToken(matlabParser.AND, i)

        def DBL_AND(self, i:int=None):
            if i is None:
                return self.getTokens(matlabParser.DBL_AND)
            else:
                return self.getToken(matlabParser.DBL_AND, i)

        def getRuleIndex(self):
            return matlabParser.RULE_expressaoELogico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressaoELogico" ):
                listener.enterExpressaoELogico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressaoELogico" ):
                listener.exitExpressaoELogico(self)




    def expressaoELogico(self):

        localctx = matlabParser.ExpressaoELogicoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expressaoELogico)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.expressaoComparacao()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23 or _la==24:
                self.state = 150
                _la = self._input.LA(1)
                if not(_la==23 or _la==24):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 151
                self.expressaoComparacao()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoComparacaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressaoIntervalo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(matlabParser.ExpressaoIntervaloContext)
            else:
                return self.getTypedRuleContext(matlabParser.ExpressaoIntervaloContext,i)


        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(matlabParser.EQ)
            else:
                return self.getToken(matlabParser.EQ, i)
